browser, news refactoring and ui