@@ -1,17 +1,16 @@
 package openwrestling.view.browser.controller;
 
 import javafx.beans.value.ChangeListener;
+import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
-import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.GridPane;
-import javafx.util.Callback;
 import openwrestling.model.SegmentItem;
 import openwrestling.model.gameObjects.EventTemplate;
 import openwrestling.model.gameObjects.Promotion;
@@ -19,57 +18,36 @@ import openwrestling.model.gameObjects.TagTeam;
 import openwrestling.model.segment.constants.browse.mode.BrowseMode;
 import openwrestling.model.segment.constants.browse.mode.GameObjectQueryHelper;
 import openwrestling.model.utility.ModelUtils;
+import openwrestling.view.results.controller.ResultsCardController;
 import openwrestling.view.utility.GameScreen;
 import openwrestling.view.utility.ScreenCode;
 import openwrestling.view.utility.SortControl;
 import openwrestling.view.utility.ViewUtils;
 import openwrestling.view.utility.interfaces.ControllerBase;
 import org.apache.logging.log4j.Level;
-import org.apache.logging.log4j.LogManager;
 
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.ResourceBundle;
+import java.util.stream.Collectors;
+
+import static openwrestling.model.segment.constants.browse.mode.BrowseMode.*;
 
 
 public class BrowserController extends ControllerBase implements Initializable {
 
     @FXML
-    private Button rosterButton;
+    private ComboBox<BrowseMode> browseModeComboBox;
 
     @FXML
     private GridPane gridPane;
 
     @FXML
-    private Button eventsButton;
-
-    @FXML
-    private Button staffButton;
-
-    @FXML
-    private Button titlesButton;
-
-    @FXML
-    private Button stablesButton;
-
-    @FXML
-    private Button rosterSplitButton;
-
-    @FXML
-    private Button teamsButton;
-
-    @FXML
-    private Button freeAgentsButton;
-
-    @FXML
-    private Button hireStaffButton;
+    private AnchorPane imageAnchor;
 
     @FXML
     private Button myPromotionButton;
-
-    private List<Button> browseButtons;
 
     @FXML
     private ComboBox<Promotion> promotionComboBox;
@@ -89,11 +67,8 @@ public class BrowserController extends ControllerBase implements Initializable {
 
     private GameScreen sortControl;
 
-    private Label categoryButton;
-
     private Promotion currentPromotion;
 
-    private BrowseMode currentBrowseMode;
     private SortControl sortControlController;
     private GameObjectQueryHelper queryHelper;
 
@@ -102,7 +77,10 @@ public class BrowserController extends ControllerBase implements Initializable {
         sortControlController.setCurrentPromotion(newPromotion);
 
         if (currentPromotion != null) {
-            categoryButton.setText(newPromotion.toString());
+            imageAnchor.getChildren().clear();
+            GameScreen card = ViewUtils.loadScreenFromResource(ScreenCode.RESULTS_CARD, mainApp, gameController, imageAnchor);
+            ((ResultsCardController) card.controller).setWorkerInfoMode(50);
+            card.controller.setCurrent(currentPromotion);
 
             promotionComboBox.getSelectionModel().select(currentPromotion);
 
@@ -152,15 +130,13 @@ public class BrowserController extends ControllerBase implements Initializable {
 
         if (button == myPromotionButton) {
             setCurrentPromotion(playerPromotion());
-        } else {
-            currentBrowseMode = BrowseMode.valueOf(button.getId());
-            ViewUtils.updateSelectedButton(button, browseButtons);
         }
 
         browse();
     }
 
     private void browse() {
+        BrowseMode currentBrowseMode = browseModeComboBox.getValue();
 
         mainDisplayPane.getChildren().clear();
         displaySubScreen = ViewUtils.loadScreenFromResource(
@@ -180,57 +156,39 @@ public class BrowserController extends ControllerBase implements Initializable {
     }
 
     private List<? extends SegmentItem> currentListToBrowse() {
-        Promotion promotion = currentBrowseMode.equals(BrowseMode.FREE_AGENTS)
+        Promotion promotion = browseModeComboBox.getValue().equals(FREE_AGENTS)
                 ? playerPromotion() : currentPromotion;
-        return queryHelper.segmentItemsToBrowse(currentBrowseMode, promotion);
+        return queryHelper.segmentItemsToBrowse(browseModeComboBox.getValue(), promotion);
     }
 
     @Override
     public void initialize(URL url, ResourceBundle rb) {
 
-        logger = LogManager.getLogger(this.getClass());
-
-        this.browseButtons = new ArrayList<>(Arrays.asList(
-                eventsButton, freeAgentsButton, myPromotionButton, rosterButton,
-                stablesButton, staffButton, teamsButton, titlesButton, hireStaffButton,
-                rosterSplitButton
+        browseModeComboBox.setItems(FXCollections.observableArrayList(
+                List.of(
+                        WORKERS,
+                        FREE_AGENTS,
+                        EVENTS,
+                        TAG_TEAMS,
+                        STABLES,
+                        ROSTER_SPLIT,
+                        TITLES,
+                        STAFF,
+                        HIRE_STAFF
+                )
         ));
-
-        rosterButton.setId(BrowseMode.WORKERS.name());
-        freeAgentsButton.setId(BrowseMode.FREE_AGENTS.name());
-        eventsButton.setId(BrowseMode.EVENTS.name());
-        teamsButton.setId(BrowseMode.TAG_TEAMS.name());
-        titlesButton.setId(BrowseMode.TITLES.name());
-        staffButton.setId(BrowseMode.STAFF.name());
-        hireStaffButton.setId(BrowseMode.HIRE_STAFF.name());
-        stablesButton.setId(BrowseMode.STABLES.name());
-        rosterSplitButton.setId(BrowseMode.ROSTER_SPLIT.name());
 
         ViewUtils.lockGridPane(gridPane);
 
-        categoryButton = new Label();
-
-        currentBrowseMode = BrowseMode.WORKERS;
-
+        browseModeComboBox.setValue(WORKERS);
     }
 
     private void initializePromotionComboBox() {
-        promotionComboBox.getItems().addAll(gameController.getPromotionManager().getPromotions());
+        List<Promotion> promotions = gameController.getPromotionManager().getPromotions().stream()
+                .sorted(Comparator.comparing(Promotion::getPopularity))
+                .collect(Collectors.toList());
 
-        Callback<ListView<Promotion>, ListCell<Promotion>> cellFactory = (ListView<Promotion> p) -> new ListCell<>() {
-            @Override
-            protected void updateItem(Promotion item, boolean empty) {
-                super.updateItem(item, empty);
-                if (item == null || empty) {
-                    setText(null);
-                } else {
-                    setText(item.getShortName());
-                }
-            }
-        };
-
-        promotionComboBox.setCellFactory(cellFactory);
-        promotionComboBox.setButtonCell(cellFactory.call(null));
+        promotionComboBox.getItems().addAll(promotions);
 
         promotionComboBox.getSelectionModel().selectedItemProperty()
                 .addListener((observable, oldValue, newValue) -> setCurrentPromotion(newValue));
@@ -240,6 +198,9 @@ public class BrowserController extends ControllerBase implements Initializable {
     @Override
     public void initializeMore() {
         queryHelper = new GameObjectQueryHelper(gameController);
+
+        myPromotionButton.setText(playerPromotion().getShortName());
+
         try {
             initializePromotionComboBox();
 
@@ -260,7 +221,9 @@ public class BrowserController extends ControllerBase implements Initializable {
 
             promotionComboBox.setValue(playerPromotion());
 
-            rosterButton.fire();
+            browseModeComboBox.setOnAction(event -> browse());
+            browseModeComboBox.setValue(WORKERS);
+            browse();
 
         } catch (Exception ex) {
             logger.log(Level.ERROR, "Error initializing broswerController", ex);
@@ -274,7 +237,7 @@ public class BrowserController extends ControllerBase implements Initializable {
         if (obj instanceof EventTemplate) {
             EventTemplate template = (EventTemplate) obj;
             setCurrentPromotion(template.getPromotion());
-            selectSegmentItem(BrowseMode.EVENTS, template);
+            selectSegmentItem(EVENTS, template);
         } else if (obj instanceof TagTeam) {
             TagTeam tagTeam = (TagTeam) obj;
             if (gameController.getTagTeamManager().getTagTeams(playerPromotion()).contains(tagTeam)) {
@@ -297,10 +260,7 @@ public class BrowserController extends ControllerBase implements Initializable {
     }
 
     private void setBrowseMode(BrowseMode browseMode) {
-        currentBrowseMode = browseMode;
-        ViewUtils.updateSelectedButton(
-                browseButtons.stream().filter(button -> button.getId().equals(browseMode.name())).findFirst().get(),
-                browseButtons);
+        browseModeComboBox.setValue(browseMode);
         browse();
         sortControlController.clearFilters();
     }
